added background image && minimized page width

--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
   <section id="wrapper">
     <aside id="left" class="centered">
       <div>
-        <div class="img-container">
-          <img src="./img/16469.jpg" alt="buddha">
+        <div id="info">
+          <div class="centered info-image">
+            <div class="img-container">
+              <img src="./img/16469.jpg" alt="buddha">
+            </div>
+          </div>
+          <div class="centered">
+            <h1 id="main-heading" class="text-center">Quote Generator</h1>
+          </div>
         </div>
-        <h1 id="main-heading" class="text-center">Quote Generator</h1>
         <div id="customize">
           <div class="centered">
             <div>
@@ -46,6 +52,9 @@
     </aside>
     <aside id="right" class="centered">
       <div>
+        <div>
+          <h3 class="sub-heading text-center">Quotations</h3>
+        </div>
         <div>
           <div class="quote centered">
             <article>
