added padding to body

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
             </div>
           </div>
           <div class="centered">
-            <h1 id="main-heading" class="text-center">Quote Generator</h1>
+            <p>version 1.0.0</p>
           </div>
         </div>
         <div id="customize">
           <div class="centered">
             <div>
-              <p>Click here to customize quotes</p>
+              <p class="text-center">Generate or customize quotes</p>
+              <button class="button active">Generate</button>
               <button class="button ghost">Customize</button>
             </div>
           </div>
@@ -52,43 +53,49 @@
     </aside>
     <aside id="right" class="centered">
       <div>
-        <div>
-          <h3 class="sub-heading text-center">Quotations</h3>
+        <div class="centered">
+          <div>
+            <h1 class="main-heading">Quote Generator</h1>
+            <h3 class="green text-center">Buddha Quotes</h3>
+          </div>
         </div>
         <div>
           <div class="quote centered">
             <article>
-              <blockquote>We are shaped by our thoughts; we become what we think. When the mind is pure, joy follows like a shadow that never leaves.</blockquote>
+              <blockquote> <span class="quotation-mark">"</span> Long is the night to him who is awake; long is a mile to him who is tired; long is life to the foolish who do not know
+              the true law.<span class="quotation-mark">"</span> - Buddha</blockquote>
               <hr class="styled">
             </article>
-          </div>
+          </div> <!-- quote -->
           <div class="quote centered">
             <article>
-              <blockquote>We are shaped by our thoughts; we become what we think. When the mind is pure, joy follows like a shadow
-                that never leaves.</blockquote>
+              <blockquote> <span class="quotation-mark">"</span> We are shaped by our thoughts; we become what we think. When the
+                mind is pure, joy follows like a shadow that never leaves.<span class="quotation-mark">"</span> - Buddha
+              </blockquote>
               <hr class="styled">
             </article>
-          </div>
+          </div> <!-- quote -->
           <div class="quote centered">
             <article>
-              <blockquote>We are shaped by our thoughts; we become what we think. When the mind is pure, joy follows like a shadow
-                that never leaves.</blockquote>
+              <blockquote> <span class="quotation-mark">"</span> The one in whom no longer exist the craving and thirst that perpetuate becoming; how could you track that Awakened one,
+              trackless, and of limitless range.<span class="quotation-mark">"</span> - Buddha
+              </blockquote>
               <hr class="styled">
             </article>
-          </div>
+          </div> <!-- quote -->
           <div class="quote centered">
             <article>
-              <blockquote>We are shaped by our thoughts; we become what we think. When the mind is pure, joy follows like a shadow
-                that never leaves.</blockquote>
+              <blockquote> <span class="quotation-mark">"</span> If you propose to speak always ask yourself, is it true, is it necessary, is it kind.<span class="quotation-mark">"</span> - Buddha
+              </blockquote>
               <hr class="styled">
             </article>
-          </div>
+          </div> <!-- quote -->
           <div class="quote centered">
             <article>
-              <blockquote>We are shaped by our thoughts; we become what we think. When the mind is pure, joy follows like a shadow
-                that never leaves.</blockquote>
+              <blockquote> <span class="quotation-mark">"</span> Ardently do today what must be done. Who knows? Tomorrow, death comes.<span class="quotation-mark">"</span> - Buddha
+              </blockquote>
             </article>
-          </div>
+          </div> <!-- quote -->
         </div>
       </div>
     </aside>
