--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="author" content="Emmanuel-Melon">
   <!-- reset styles -->
-  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="src/css/reset.css">
   <!-- custom styles -->
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="src/css/custom.css">
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Adamina|Dosis" rel="stylesheet">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <title>Quote Generator</title>
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body>
   <section id="wrapper">
@@ -65,9 +66,9 @@
     </aside>
   </section>
   <!-- scripts -->
-  <script src="js/helpers.js"></script>
-  <script src="js/fragments.js"></script>
-  <script src="js/quotes.js"></script>
-  <script src="js/main.js"></script>
+  <script src="src/js/helpers.js"></script>
+  <script src="src/js/fragments.js"></script>
+  <script src="src/js/quotes.js"></script>
+  <script src="src/js/main.js"></script>
 </body>
 </html>
