forms: added form event handlers

--- a/index.html
+++ b/index.html
@@ -45,16 +45,6 @@
           <form id="form" class="animated-form animated-form--light">
             <p class="info">Customize your quotes</p>
             <div class="form-group">
-              <label for="wisdom" class="form-group__type-label">Wisdom</label>
-              <input
-                      class="form-group__input-type"
-                      id="wisdom"
-                      name="type"
-                      placeholder="e.g John Doe"
-                      type="radio"
-                      value="motivational"
-                      checked
-              >
               <label for="motivational" class="form-group__type-label">Motivational</label>
               <input
                       class="form-group__input-type"
@@ -62,6 +52,16 @@
                       name="type"
                       type="radio"
                       value="motivational"
+              >
+              <label for="wisdom" class="form-group__type-label">Wisdom</label>
+              <input
+                      class="form-group__input-type"
+                      id="wisdom"
+                      name="type"
+                      placeholder="e.g John Doe"
+                      type="radio"
+                      value="wisdom"
+                      checked
               >
             </div> <!-- form-group -->
             <div class="form-group">
