hosting: migrating to Firebase hosting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <section id="wrapper">
+  <main id="wrapper">
     <aside id="sidebar">
       <div>
         <div id="info">
@@ -23,7 +23,7 @@
               >
             </div>
           </div>
-          <div class="centered">
+          <div class="centered version">
             <p>version 1.0.0</p>
           </div>
         </div>
@@ -42,79 +42,14 @@
       <div class="centered">
         <div>
           <h1 class="main-heading" id="main-heading">Random Quote Generator</h1>
-          <form id="form" class="animated-form animated-form--light">
-            <p class="info">Customize your quotes</p>
-            <div class="form-group">
-              <label for="motivational" class="form-group__type-label">Motivational</label>
-              <input
-                      class="form-group__input-type"
-                      id="motivational"
-                      name="type"
-                      type="radio"
-                      value="motivational"
-              >
-              <label for="wisdom" class="form-group__type-label">Wisdom</label>
-              <input
-                      class="form-group__input-type"
-                      id="wisdom"
-                      name="type"
-                      placeholder="e.g John Doe"
-                      type="radio"
-                      value="wisdom"
-                      checked
-              >
-            </div> <!-- form-group -->
-            <div class="form-group">
-              <label for="one"><img src="./public/img/leaf.svg" alt="leaf" class="form-group__leaf"></label>
-              <input
-                      class="form-group__input"
-                      type="radio"
-                      id="one"
-                      name="num"
-                      value=1
-                      checked
-              >
-              <label for="two"><img src="./public/img/leaf.svg" alt="leaf" class="form-group__leaf"></label>
-              <input
-                      class="form-group__input"
-                      type="radio"
-                      id="two"
-                      name="num"
-                      value=2
-              >
-              <label for="three"><img src="./public/img/leaf.svg" alt="leaf" class="form-group__leaf"></label>
-              <input
-                      class="form-group__input"
-                      type="radio"
-                      id="three"
-                      name="num"
-                      value=3
-              >
-              <label for="four"><img src="./public/img/leaf.svg" alt="leaf" class="form-group__leaf"></label>
-              <input
-                      class="form-group__input"
-                      type="radio"
-                      id="four"
-                      name="num"
-                      value=4
-              >
-              <label for="five"><img src="./public/img/leaf.svg" alt="leaf" class="form-group__leaf"></label>
-              <input
-                      class="form-group__input"
-                      type="radio"
-                      id="five"
-                      name="num"
-                      value=5
-              >
-            </div>
-          </form> <!-- form -->
+
         </div>
       </div>
       <ul id="quotes">
         <!-- quotes -->
       </ul>
     </section>
-  </section>
+  </main>
   <!-- scripts -->
 </body>
 </html>
