--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               <h2 class="sub-heading text-center" id="quoteType"></h2> <hr class="styled">
               <p class="text-center">Generate a random quote</p>
               <button class="button active" id="generate">Generate</button>
+              <button class="button" id="customize">Customize</button>
             </div>
           </div>
         </div>
@@ -43,6 +44,29 @@
         <div>
           <h1 class="main-heading" id="main-heading">Random Quote Generator</h1>
 
+        </div>
+      </div>
+      <div class="centered">
+        <div class="customization" id="customization">
+          <h3>Customize Quotes</h3>
+            <div class="form-group">
+              <label for="motivational">Motivational</label>
+              <input type=radio value="motivational" id="motivational" name="type">
+              <label for="wisdom">Wisdom</label>
+              <input type=radio value="motivational" id="wisdom" name="type">
+            </div>
+            <div class="form-group">
+              <label for="one">One</label>
+              <input type=radio value="1" id="one" name="num">
+              <label for="two">Two</label>
+              <input type=radio value="2" id="two" name="num">
+              <label for="three">Two</label>
+              <input type=radio value="3" id="three" name="num">
+              <label for="four">Two</label>
+              <input type=radio value="4" id="four" name="num">
+              <label for="five">Two</label>
+              <input type=radio value="5" id="five" name="num">
+            </div>
         </div>
       </div>
       <ul id="quotes">
