--- a/index.html
+++ b/index.html
@@ -50,21 +50,23 @@
         <div class="customization" id="customization">
           <h3>Customize Quotes</h3>
             <div class="form-group">
+              <p>Type of quotes</p>
               <label for="motivational">Motivational</label>
               <input type=radio value="motivational" id="motivational" name="type">
               <label for="wisdom">Wisdom</label>
               <input type=radio value="motivational" id="wisdom" name="type">
             </div>
             <div class="form-group">
+              <p>Number of quotes</p>
               <label for="one">One</label>
               <input type=radio value="1" id="one" name="num">
               <label for="two">Two</label>
               <input type=radio value="2" id="two" name="num">
-              <label for="three">Two</label>
+              <label for="three">Three</label>
               <input type=radio value="3" id="three" name="num">
-              <label for="four">Two</label>
+              <label for="four">Four</label>
               <input type=radio value="4" id="four" name="num">
-              <label for="five">Two</label>
+              <label for="five">Five</label>
               <input type=radio value="5" id="five" name="num">
             </div>
         </div>
