minor bug fixes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- custom styles -->
   <link rel="stylesheet" href="./src/css/styles.css">
   <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Adamina|Dosis" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Questrial|Pacifico" rel="stylesheet">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -33,7 +33,7 @@
               <h2 class="sub-heading text-center" id="quoteType"></h2> <hr class="styled">
               <p class="text-center">Generate a random quote</p>
               <button class="button active" id="generate">Generate</button>
-              <button class="button" id="customize">Customize</button>
+              <button class="button light" id="customize">Customize</button>
             </div>
           </div>
         </div>
@@ -48,13 +48,12 @@
       </div>
       <div class="centered">
         <div class="customization" id="customization">
-          <h3>Customize Quotes</h3>
             <div class="form-group">
               <p>Type of quotes</p>
               <label for="motivational">Motivational</label>
               <input type=radio value="motivational" id="motivational" name="type">
               <label for="wisdom">Wisdom</label>
-              <input type=radio value="motivational" id="wisdom" name="type">
+              <input type=radio value="wisdom" id="wisdom" name="type">
             </div>
             <div class="form-group">
               <p>Number of quotes</p>
